--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 /nuget/licenses/
 
 # locally-built Nuget package
-/StoneSteps.MaxMindDB.Static.*.nupkg
+/StoneSteps.MaxMindDB.VS2022.Static.*.nupkg
 
 # sample app for testing the Nuget package
 /sample-mmdblookup/.vs/
