--- a/.github/workflows/nuget-mmdb-1.7.1.yml
+++ b/.github/workflows/nuget-mmdb-1.7.1.yml
@@ -60,7 +60,7 @@ env:
   MAXMIND_SHA256: e8414f0dedcecbc1f6c31cb65cd81650952ab0677a4d8c49cab603b3b8fb083e
 
   # for VS Community Edition, replace `Enterprise` with `Community` in the path
-  VCVARSALL: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall'
+  VCVARSALL: 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall'
 
   # Nuget Gallery (www.nuget.org) publish URL
   NUGET_PUB_URL: https://api.nuget.org/v3/index.json
@@ -82,8 +82,13 @@ jobs:
       run: |
         curl --location --output ${{ env.MAXMIND_FNAME }}.tar.gz https://github.com/maxmind/libmaxminddb/releases/download/${{ env.PKG_VER }}/${{ env.MAXMIND_FNAME }}.tar.gz
         
-    - name: Verify libmaxminddb checksum
-      run: 7z h -scrcSHA256 ${{ env.MAXMIND_FNAME }}.tar.gz | findstr /C:"SHA256 for data" | call devops\check-sha256 "${{ env.MAXMIND_SHA256 }}"
+    - name: Verify libmaxminddb
+      run: |
+        7z h -scrcSHA256 ${{ env.MAXMIND_FNAME }}.tar.gz | findstr /C:"SHA256 for data" | call devops\check-sha256 "${{ env.MAXMIND_SHA256 }}"
+
+    - name: Extract libmaxminddb
+      run: |
+        tar -xzf ${{ MAXMIND_FNAME }}.tar.gz
 
     - name: Build x64
       working-directory: ${{ env.MAXMIND_FNAME }}
