--- a/.github/workflows/nuget-mmdb-1.7.1.yml
+++ b/.github/workflows/nuget-mmdb-1.7.1.yml
@@ -88,7 +88,7 @@ jobs:
 
     - name: Extract libmaxminddb
       run: |
-        tar -xzf ${{ MAXMIND_FNAME }}.tar.gz
+        tar -xzf ${{ env.MAXMIND_FNAME }}.tar.gz
 
     - name: Build x64
       working-directory: ${{ env.MAXMIND_FNAME }}
